# kytok.org.ua-Qt-intro-resources

./: .gitignore  CMakeLists.txt  README.md
basic-window/: CMakeLists.txt  Makefile  main.cpp
basic-window/window/: ArbitraryWindow.cpp  ArbitraryWindow.h  CMakeLists.txt
button-with-hello/: CMakeLists.txt  Makefile  main.cpp
button-with-hello/window/: CMakeLists.txt  HelloButtonWindow.cpp  HelloButtonWindow.h
window-with-menu/: CMakeLists.txt  Makefile  main.cpp
window-with-menu/window/: CMakeLists.txt  WindowWithMenu.cpp  WindowWithMenu.h
